[package]
name = "rose"
version = "0.1.0"
edition = "2024"

[dependencies]
glib = "0.22.3"
gtk4 = "0.11.1"
tokio = { version = "1.50.0", features = ["process", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.adw]
package = "libadwaita"
version = "0.9.1"
